--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ layout: layout.html
 ---
 
 {{ page.title }}
-
+demo - 1
 {% for post in site.posts %}
 
 {{ post.date|date_to_string }} <a href='{{ site.baseurl }}{{ post.url }}'>{{ post.title }}</a>
